--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,9 @@
- @import "tailwindcss";
+@import "tailwindcss";
 @import "tw-animate-css";
+
+html {
+  scroll-behavior: smooth;
+}
 
 @custom-variant dark (&:is(.dark *));
 
@@ -46,8 +50,8 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
+  --background: oklch(0.145 0 0); /* тёмный фон */
+  --foreground: oklch(0.985 0 0); /* светлый текст */
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
